# Poseidon252

./: .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  decrypt.rs  index.html  rust-toolchain  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: dusk_ci.yml
assets/: HOWTO.md
benches/: cipher_decrypt.rs  cipher_encrypt.rs  decrypt.rs  encrypt.rs  hash.rs  merkle.rs  poseidon252.rs  sponge.rs
implementors/core/borrow/: trait.Borrow.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/kelvin/annotations/: trait.Combine.js
implementors/kelvin/content/: trait.Content.js
implementors/std/io/: trait.Read.js  trait.Write.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
poseidon252/: all.html  constant.ARITY.html  index.html  sidebar-items.js  struct.PoseidonAnnotation.html  struct.PoseidonBranch.html  struct.PoseidonLevel.html  struct.StorageScalar.html
poseidon252/encrypt/: index.html  sidebar-items.js  struct.EncryptedData.html
poseidon252/hashing_utils/poseidon_annotation/: struct.PoseidonAnnotation.html
poseidon252/hashing_utils/scalar_storage/: struct.StorageScalar.html
poseidon252/merkle_lvl_hash/: index.html
poseidon252/merkle_proof/: fn.merkle_opening_gadget.html  fn.merkle_opening_scalar_verification.html  index.html  sidebar-items.js  struct.PoseidonBranch.html  struct.PoseidonLevel.html
poseidon252/merkle_proof/poseidon_branch/: struct.PoseidonBranch.html  struct.PoseidonLevel.html
poseidon252/merkle_proof/proof/: fn.merkle_opening_gadget.html  fn.merkle_opening_scalar_verification.html
poseidon252/sponge/: index.html  sidebar-items.js
poseidon252/sponge/sponge/: fn.sponge_hash.html  fn.sponge_hash_gadget.html  index.html  sidebar-items.js
poseidon252/tree/: index.html  sidebar-items.js  struct.PoseidonAnnotation.html  struct.PoseidonTree.html
src/: cipher.rs  encryption.rs  error.rs  gadgets.rs  hades.rs  hash.rs  lib.rs  main.rs  merkle.rs  perm_uses.rs  sponge.rs  tree.rs
src/cipher/: cipher.rs  error.rs  gadget.rs  mod.rs  tests.rs  zk.rs
src/encrypt/: mod.rs
src/encryption/: gadget.rs
src/hades/: mds_matrix.rs  permutation.rs  round_constants.rs  strategies.rs
src/hades/permutation/: gadget.rs  scalar.rs
src/hades/strategies/: gadget.rs  scalar.rs
src/hash/: gadget.rs
src/hashing_utils/: mod.rs  poseidon_annotation.rs  scalar_storage.rs
src/merkle/: tree.rs
src/merkle_lvl_hash/: hash.rs  mod.rs
src/merkle_proof/: mod.rs  poseidon_branch.rs  proof.rs
src/perm_uses/: fixed_hash.rs  mod.rs  pad.rs
src/poseidon252/: lib.rs.html
src/poseidon252/encrypt/: mod.rs.html
src/poseidon252/hashing_utils/: mod.rs.html  poseidon_annotation.rs.html  scalar_storage.rs.html
src/poseidon252/merkle_lvl_hash/: hash.rs.html  mod.rs.html
src/poseidon252/merkle_proof/: mod.rs.html  poseidon_branch.rs.html  proof.rs.html
src/poseidon252/sponge/: mod.rs.html  pad.rs.html  sponge.rs.html
src/poseidon252/tree/: mod.rs.html
src/sponge/: gadget.rs  hash.rs  merkle.rs  mod.rs  pad.rs  sponge.rs  truncated.rs
src/tree/: annotation.rs  branch.rs  hash.rs  leaf.rs  mod.rs  tests.rs  tree.rs  zk.rs
src/tree/annotation/: max.rs  mod.rs  poseidon.rs
tests/: blindbid.rs  block_height.rs  cipher.rs  encryption.rs  encryption_gadget.rs  hash.rs  max_annotation.rs  merkle.rs  opening_gadget.rs  preimage_chain.rs  sponge.rs  sponge_test.rs  tree.rs  walkable_iter.rs  zk.rs
