[package]
name = "dusk-poseidon"
version = "0.35.0"
description = "Implementation of Poseidon hash algorithm over the Bls12-381 Scalar field."
categories = ["algorithms", "cryptography", "no-std", "wasm"]
keywords = ["cryptography", "zero-knowledge", "crypto"]

repository = "https://github.com/dusk-network/poseidon252"
edition = "2021"
license = "MPL-2.0"

[dependencies]
dusk-bls12_381 = { version = "0.13", default-features = false }
dusk-jubjub = { version = "0.14", default-features = false }
dusk-bytes = "0.1"
dusk-plonk = { version = "0.19", default-features = false, features = ["alloc"], optional = true }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.8", default-features = false, features = ["getrandom", "std_rng"] }
ff = { version = "0.13", default-features = false }

[features]
zk = [
    "dusk-plonk",
]
merkle = []
cipher = []
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/validation",
    "rkyv/alloc",
    "rkyv",
    "bytecheck",
    "dusk-bls12_381/rkyv-impl"
]

[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.release]
debug = false
panic = 'abort'
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "sponge"
harness = false
required-features = ["zk"]

[[bench]]
name = "cipher_encrypt"
harness = false
required-features = ["cipher", "zk"]

[[bench]]
name = "cipher_decrypt"
harness = false
required-features = ["cipher", "zk"]
